# bracecollapse

./: README.md  pyproject.toml
src/bracecollapse/: __init__.py  __main__.py
tests/: test_bracecollapse.py  test_bracetree.py
