[project]
name = "bracetree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Simon-Martin Schröder", email = "mschroeder@geomar.de" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
analysis = [
    "ipykernel>=6.30.1",
]
